Была доработана регистрация

--- a/front/about.html
+++ b/front/about.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Подключаем css -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
     <header>
+        <!-- Меню на побочных страницах -->
         <div class="menu2">
             <a href="index.html" class="menu_button">HOME</a>
             <a href="about.html" class="menu_button">ABOUT</a>
