--- a/front/index.html
+++ b/front/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test task</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <!-- Подключаем css -->
     <link rel="stylesheet" href="styles/style.css">
+    <!-- Подключаем шрифты -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,19 +20,24 @@
     <header>
         <div class="photo">
             <div class="menu">
+                <!-- Меню на основной странице -->
                 <a href="index.html" class="menu_button">HOME</a>
                 <a href="about.html" class="menu_button">ABOUT</a>
                 <a href="index.html"><img class="graficlogo" src="img/logo-1.svg" alt="Logo"></a>
                 <a href="servise.html" class="menu_button">SERVICE</a>
                 <a href="contact.html" class="menu_button">CONTACT</a>
-                <a href="authorization.html" class="menu_button">REGISTRATION/ENTER</a>
+                <a href="/back/authorization.php" class="menu_button">REGISTRATION/ENTER</a>
             </div>
+            <!-- Следующие тесты чуть меньше, чем были указаны на образце, для большего сходства -->
+            <!-- Текст на фоне картинки -->
             <div id="txt1">
                 <p>I am Open Sans 120px</p>
             </div>
         </div>
     </header>
+    <!-- Текст после фона -->
     <div id="txt2">I am Open Sans extra bold 48px</div>
+    <!-- Самый маленький текст -->
     <div id="txt3">Please follow all directions, make fonts the same size, respect margins and spacing.</div>
     <div class="image">
         <div id="picture1"></div>
