--- a/front/contact.html
+++ b/front/contact.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
+    <!-- Подключаем css -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
     <header>
         <div class="menu2">
+            <!-- Меню на побочных страницах -->
             <a href="index.html" class="menu_button">HOME</a>
             <a href="about.html" class="menu_button">ABOUT</a>
             <a href="index.html"><img class="graficlogo" src="img/logo-1.svg" alt="Logo"></a>
